# cocoindex-code-mcp-server

./: .coveragerc  .env  .env.template  .gitignore  .gitmodules  .mcp.json  .pre-commit-config.yaml  .replit  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  README-MCP-SERVER.md  README.md  STATE-MCP-SERVER.md  STATE-multi-language.md  STATE-old.md  STATE.md  TODO-backlog.md  TODO-db-abstration.md  TODO-haskell.md  TODO.md  cocoindex-code-mcp-server.code-workspace  haskell_tree_sitter.pyi  main.py  pyproject.toml  pytest.ini  requirements-replit.txt  ruff.toml  run_tests.py  setup.cfg
.devcontainer/: devcontainer.json  devcontainer.template.json  pre-devcontainer.env.template
.github/workflows/: build.yml  manylinux-ci.yml  maturin-ci.yml
compose/: postgres.yaml  qdrant.yaml
docs/: phase2-completion-summary.md
docs/claude/: ASTChunk.md  ASTChunk_integration.md  ASTChunking.md  Code-Structure.md  DB-Abstraction.md  Embedding-Selection.md  Flow-Debug.md  Flow-Implemented.md  Haskell-ASTChunking.md  Hybrid_Search.md  LIBRARY_UPDATE_SUMMARY.md  Mcp_Server.md  Mcp_Server_Development.md  REFACTORING_SUMMARY.md  bug-fixes-2025-10-02.md  cocoindex-rescan.md  integration-test-results.md  integration-tests.md
docs/cocoindex/: ASTVistor-and-Type-Debugging.md  Indexing-Basics-CocoIndex.md  Quickstart-CocoIndex.md  cocoindex-version-updates.md  customized-flows.md  dataslice-type.md  embedding.md  flow-and-types.md  flow.md  language-aware-embeddings.md  metadata.md  search.md  smart-embedding.md  tree-sitter-2.md  tree-sitter.md
docs/instructions/: cocoindex-rag-architecture.md  cocoindex-rescan.md  distribution.md  embedding-metadata.md  mcp-implementation.md  proposed-code-structure.md  proposed-rag-metadata.md  queries-in-cocoindex.md  readme-features-quickstart.md
docs/observations/: improvements.md  plan-for-bug-1.md
docs/tree-sitter/: error-nodes.md
docs/vectordb/: hybrid-search-with-pgvector-vs-qdrant.md
examples/: __init__.py  check_database_schema.py  cocoindex_tool.py  code_embedding_demo.py  debug_ast.py  external_code_embedding_flow.py  minimal_mcp_test.py  multiple_sources_example.py  postgres_metadata.py  python_analyzer_example.py  test_claude_desktop_simulation.py  verify_embedding_implementation.py
examples/debugging/: configure_single_file_test.py  debug_cocoindex_flow.py  debug_language_analysis.py  test_minimal_flow.py
python/cocoindex_code_mcp_server/: __init__.py  ast_chunking.py  ast_visitor.py  cocoindex_config.py  main_mcp_server.py  mappers.py  pattern_utils.py  smart_code_embedding.py
rust/: Cargo.toml  haskell_tree_sitter.pyi
rust/src/: lib.rs
scripts/: act-manylinux.sh  act.sh  apply-monkeytype-all.sh  cocoindex-neo4j.sh  cocoindex-postgresql-improved.sh  cocoindex-postgresql.sh  cocoindex-qdrant.sh  dmypy-auto-type-annotate.sh  format-python.sh  hybrid-search-with-coverage.sh  install-pgvector.py  mcp-claude-code.sh  mcp-memory.sh  mcp-server-with-coverage.sh  mcp-server.sh  misc.sh  mypy-check-tests.sh  mypy-check.sh  pytest-with-coverage.sh  rm-log-files.sh  run-once.sh  sitecustomize.py  test-cuda.sh
src/: __init__.py  arg_parser.py  ast_chunking.py  cocoindex_config.py  haskell_support.py  hybrid_search.py  lib.rs  main.py  main_hybrid_search.py  python_code_analyzer.py  query_interactive.py  smart_code_embedding.py
src/cocoindex-code-mcp-server/: __init__.py  arg_parser.py  ast_chunking.py  ast_visitor.py  cocoindex_config.py  hybrid_search.py  keyword_search_parser.py  keyword_search_parser_lark.py  main.py  main_mcp_server.py  mcp_server.py  start_mcp_server.py  test_mcp_integration.py
src/cocoindex_code_mcp_server/: __init__.py  arg_parser.py  (+18 more)
tests/: DATABASE_INTEGRATION_TESTS.md  README_BASELINE_TESTS.md  README_DATABASE_INTEGRATION_TESTS.md  README_EXTENSION_TESTS.md  README_HYBRID_SEARCH_TESTS.md  README_METADATA_TESTS.md  README_SEARCH_TESTS.md  __init__.py  all_languages_baseline.py  all_languages_baseline_results.json  cocoindex_util.py  common.py  conftest.py  db_comparison.py  extract_metrics.py  mcp_client.py  search_config.py  search_test_flows.py  test_actual_chunking_methods.py  test_all_languages_baseline.py  test_ast_chunk_operations.py  test_ast_chunking_comprehensive.py  test_ast_chunking_simple.py  test_astchunk_library_usage.py  test_chunk_compatibility.py  test_chunking_flow_integration.py  test_chunking_method_regression.py  test_chunking_standalone.py  test_class_decorator_merging.py  test_cli_args.py  test_cocoindex_flow_direct.py  test_cocoindex_integration.py  test_code_embedding_standalone.py  test_direct_python_analyzer.py  test_duplicate_key_debug.py  test_end_to_end_chunking_verification.py  test_enhanced_haskell_chunking.py  test_enhanced_haskell_chunking_standalone.py  test_enhanced_python_analyzer.py  test_extension_integration.py  (+38 more)
tests_broken/: test_chunk_compatibility.py  test_minimal_flow.py
(+139 files in other folders)
