[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "haskell-tree-sitter"
version = "0.1.0"
description = "Haskell tree-sitter support for CocoIndex"
requires-python = ">=3.11"
dependencies = [
    "cocoindex[embeddings]>=0.1.63", 
    "python-dotenv>=1.0.1",
    "psycopg[pool]>=3.2.9",
    "pgvector>=0.4.1",
    "numpy>=2.3.1",
    "pytest>=8.4.1",
    "astchunk @ git+https://github.com/yilinjz/astchunk.git"
]

[project.optional-dependencies]
test = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-asyncio>=0.23.0",
]
mcp-server = [
    "mcp>=1.12.0",
    "psycopg[binary]>=3.1.0",
    "psycopg_pool>=3.1.0",
    "lark-parser>=0.12.0",
    "prompt-toolkit>=3.0.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "haskell_tree_sitter"
