[metadata]
name = cocoindex_code_mcp_server
version = 0.1.0
description = RAG based on cocoindex as MCP server (streamingHttp), with Haskell support
author = aanno
author_email = your@email.com
license = BSD 3-Clause
# Optional: include this section for setuptools/distribution tools

[options]
#packages = find:
#install_requires =
#    # List your runtime Python dependencies here (one per line)
python_requires = >=3.8

[tool:isort]
profile = "pep8"
max-line-length = 120

[flake8]
max-line-length = 120
exclude = .git,__pycache__,.venv,build,dist,docs
extend-ignore = E203, W503  # common ignores for some formatters like black
max-complexity = 10         # warn if function is too complex
select = E,F,W,C            # E=errors, F=pyflakes, W=warnings, C=complexity

[tool:autoflake8]  # Autoflake8 supports config in setup.cfg
max-line-length = 120
remove-unused-variables = true
remove-all-unused-imports = true
expand-star-imports = true

[tool:autopep8]
max_line_length = 120

[coverage:run]              # If using pytest-cov or coverage.py
branch = True
source =
    cocoindex_code_mcp_server

[mypy]                      # If using type checking with mypy
python_version = 3.8
ignore_missing_imports = true

[isort]                     # If your team uses isort for import sorting
profile = black
line_length = 120
