[package]
name = "haskell_tree_sitter"
version = "0.1.0"
edition = "2021"

[lib]
name = "haskell_tree_sitter"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.1", features = ["extension-module"] }
tree-sitter = "0.23"
tree-sitter-haskell = "0.23.1"

[build-dependencies]
pyo3-build-config = "0.25.1"
